# zero2prod

./: .dockerignore  Cargo.toml  Dockerfile  README.md  spec.yaml
.github/workflows/: general.yml
migrations/: 20200929022651_create_subscriptions_table.sql
scripts/: init_db.sh
src/: configuration.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/routes/: subscriptions.rs
tests/: health_check.rs
